src/test/error/scope3.lns
{
   fn functest() {
      print( __func__ );
   }
   __scope root () {
      functest(); // error
      print( "hoge" );
   }
}
